# proxmox-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SETUP.md  USAGE.md  agent-card.json  docker-compose.yaml  pyproject.toml  quickstart.md  setup.sh  test-connection.sh
.github/workflows/: docker-build-push.yml  docker-build.yaml
proxmox_mcp/: client.py  server.py
proxmox_mcp/tools/: access.py  acme.py  ceph.py  cluster.py  disks.py  firewall.py  lxc.py  nodes.py  notifications.py  pools.py  qemu.py  sdn.py  storage.py
proxmox_mcp_server/: __init__.py  server.py
